tests/interpreter/pass/030-array.hyg
let n: int = 10;
let arr: array {int} = array(n, 40 + 2);

let mutable i: int = 0;
while (i < arrayLength(arr)) do {
    arrayElem(arr, i) <- arrayElem(arr, i) + i;
    i <- i + 1
};

i <- 0;
while (i < arrayLength(arr)) do {
    assert(arrayElem(arr, i) = 42 + i);
    i <- i + 1
}