tests/interpreter/fail/029-array-assign-element-out-of-lower-bound.hyg
let arr: array {int} = array(2, 1);
let mutable index: int = 2 - 3;
arrayElem(arr, index) <- arrayElem(arr, 0);
print("should not print!")